[shenker/image_analysis] WIP drift correction. find_trench_drift and ransac_translation are complete, but drift correction does not work. Will rewrite from scratch.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/230617 Geometry calibration.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/230617 Geometry calibration.ipynb
@@ -40,6 +40,7 @@
     "from dask import delayed\n",
     "from dask_jobqueue import SLURMCluster\n",
     "from distributed import Client, LocalCluster, progress\n",
+    "from holoviews.operation.datashader import regrid\n",
     "from tqdm.auto import tqdm, trange\n",
     "\n",
     "IDX = pd.IndexSlice"
@@ -681,7 +682,7 @@
     "%%time\n",
     "diag2 = util.tree()\n",
     "trenches2, info2 = trench_detection.find_trenches(\n",
-    "    imgs[20], width_to_pitch_ratio=2 / 3.5, join_info=False, diagnostics=diag2\n",
+    "    imgs[20], width_to_pitch_ratio=1.4 / 3.5, join_info=False, diagnostics=diag2\n",
     ")"
    ]
   },
@@ -772,9 +773,29 @@
    },
    "outputs": [],
    "source": [
+    "plots = {}\n",
+    "t_min = 70\n",
+    "t_delta = 50\n",
+    "for t in range(t_min, t_min + t_delta + 1, 3):\n",
+    "    # for t in [t_min, t_min+t_delta+1]:\n",
+    "    crop = get_crop(imgs[t], trenches2, 12)\n",
+    "    pts = trench_cell_endpoints(crop)\n",
+    "    plots[t] = ui.RevImage(crop).opts(frame_width=40) * hv.Points(pts + 0.5).opts(\n",
+    "        color=\"red\", size=4\n",
+    "    )\n",
+    "hv.HoloMap(plots)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# idx=59\n",
-    "idx = 80\n",
-    "crop = get_crop(imgs[idx], trenches2, 10)\n",
+    "idx = 100\n",
+    "crop = get_crop(imgs[idx], trenches2, 12)\n",
     "pts = trench_cell_endpoints(crop)\n",
     "ui.RevImage(crop).opts(frame_width=40) * hv.Points(pts + 0.5).opts(color=\"red\", size=4)\n",
     "# hv.Points(pts)"
@@ -783,37 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "plots = {}\n",
-    "for t in trange(60, 90, 1):\n",
-    "    crop = get_crop(imgs[t], trenches2, 11)\n",
-    "    pts = trench_cell_endpoints(crop)\n",
-    "    plots[t] = ui.RevImage(crop).opts(frame_width=40) * hv.Points(pts + 0.5).opts(\n",
-    "        color=\"red\", size=4\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "60",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "hv.HoloMap(plots)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61",
    "metadata": {
     "tags": []
    },
@@ -839,6 +830,8 @@
     "        neg_peaks, neg_peak_props = scipy.signal.find_peaks(\n",
     "            -grad, height=-min_height * grad.min(), width=(None, None)\n",
     "        )\n",
+    "    if len(pos_peaks) < 2:\n",
+    "        return None\n",
     "    y1 = pos_peaks[0]\n",
     "    y2 = neg_peaks[-1]\n",
     "    margin = int(\n",
@@ -850,14 +843,8 @@
     "    )\n",
     "    cutoff1 = min(y1 + 1 + margin, img.shape[0])\n",
     "    cutoff2 = max(y2 - margin, 0)\n",
-    "    weights1 = profile[:cutoff1, np.newaxis]\n",
-    "    weights2 = profile[cutoff2:, np.newaxis]\n",
-    "    x1 = (\n",
-    "        np.arange(img.shape[1])[np.newaxis, :] * (img[:cutoff1, :] * weights1) ** k\n",
-    "    ).sum() / ((img[:cutoff1, :] * weights1) ** k).sum()\n",
-    "    x2 = (\n",
-    "        np.arange(img.shape[1])[np.newaxis, :] * (img[cutoff2:, :] * weights2) ** k\n",
-    "    ).sum() / ((img[cutoff2:, :] * weights2) ** k).sum()\n",
+    "    x1 = img[:cutoff1, :].mean(axis=0).argmax()\n",
+    "    x2 = img[cutoff2:, :].mean(axis=0).argmax()\n",
     "    return np.array([[x1, y1], [x2, y2]])\n",
     "\n",
     "\n",
@@ -894,41 +881,102 @@
     "    return trenches.assign(**coords_x, **coords_y)\n",
     "\n",
     "\n",
+    "class TranslationTransform(skimage.transform.EuclideanTransform):\n",
+    "    def estimate(self, src, dst):\n",
+    "        translation = (dst - src).mean(axis=0)\n",
+    "        self.params[0 : self.dimensionality, self.dimensionality] = translation\n",
+    "        return True\n",
+    "\n",
+    "\n",
+    "def ransac_translation(\n",
+    "    data, residual_threshold=3, min_samples=10, diagnostics=None, **kwargs\n",
+    "):\n",
+    "    data = (*np.array(data).swapaxes(0, 1),)\n",
+    "    with warnings.catch_warnings():\n",
+    "        warnings.filterwarnings(\"ignore\", \"divide by zero encountered in scalar divide\")\n",
+    "        model_robust, inliers = skimage.measure.ransac(\n",
+    "            data,\n",
+    "            TranslationTransform,\n",
+    "            min_samples=min_samples,\n",
+    "            residual_threshold=residual_threshold,\n",
+    "            **kwargs,\n",
+    "        )\n",
+    "    if diagnostics is not None:\n",
+    "        feature_points = [\n",
+    "            [(*d1, \"red\" if inlier else \"gray\"), (*d2, \"red\" if inlier else \"gray\")]\n",
+    "            for d1, d2, inlier in zip(data[0], data[1], inliers)\n",
+    "        ]\n",
+    "        diagnostics[\"correspondences\"] = hv.Path(feature_points, vdims=[\"color\"]).opts(\n",
+    "            color=\"color\", line_width=2\n",
+    "        )\n",
+    "    return model_robust.translation\n",
+    "\n",
+    "\n",
     "def find_trench_drift(\n",
     "    img1,\n",
     "    img2,\n",
     "    trenches,\n",
+    "    initial_shift=None,\n",
     "    tolerance=1,\n",
     "    feature_func=trench_cell_endpoints,\n",
+    "    estimation_func=ransac_translation,\n",
+    "    max_iterations=1,\n",
     "    diagnostics=None,\n",
     "):\n",
     "    image_limits = geometry.get_image_limits(img1.shape)\n",
     "    features1 = {}\n",
-    "    shifted_trenches = filter_trenches(trenches, image_limits)\n",
+    "    if initial_shift is None:\n",
+    "        initial_shift = np.array([0, 0])\n",
+    "    shifted_trenches = filter_trenches(\n",
+    "        shift_trenches(trenches, initial_shift), image_limits\n",
+    "    )\n",
     "    for roi_idx, crop, ul in geometry.iter_crops(img1, shifted_trenches, corner=True):\n",
-    "        features1[roi_idx] = feature_func(crop) + ul[np.newaxis, ...]\n",
-    "    shift = np.array([0, 0], dtype=np.int64)\n",
-    "    plot_lines = []\n",
-    "    features2 = {}\n",
-    "    while True:\n",
+    "        if (feature := feature_func(crop)) is not None:\n",
+    "            features1[roi_idx] = feature + ul[np.newaxis, ...]\n",
+    "    shift = initial_shift\n",
+    "    for i in range(max_iterations):\n",
+    "        features_list = []\n",
+    "        features2 = {}\n",
     "        shifted_trenches = filter_trenches(\n",
     "            shift_trenches(trenches, shift), image_limits\n",
     "        )\n",
     "        for roi_idx, crop, ul in geometry.iter_crops(\n",
     "            img2, shifted_trenches, corner=True\n",
     "        ):\n",
-    "            features2[roi_idx] = feature_func(crop) + ul[np.newaxis, ...]\n",
+    "            if (feature := feature_func(crop)) is not None:\n",
+    "                features2[roi_idx] = feature + ul[np.newaxis, ...]\n",
     "        for roi_idx in features1.keys() & features2.keys():\n",
     "            roi_features1 = features1[roi_idx]\n",
     "            roi_features2 = features2[roi_idx]\n",
     "            if roi_features1 is None or roi_features2 is None:\n",
     "                continue\n",
     "            for feature_idx in range(min(len(roi_features1), len(roi_features2))):\n",
-    "                plot_lines.append(\n",
+    "                features_list.append(\n",
     "                    [roi_features1[feature_idx], roi_features2[feature_idx]]\n",
     "                )\n",
-    "        break\n",
-    "    return plot_lines"
+    "        features_list = np.array(features_list)\n",
+    "        new_shift = estimation_func(features_list, diagnostics=diagnostics)\n",
+    "        new_shift = np.round(new_shift).astype(np.int64)\n",
+    "        # if np.linalg.norm(new_shift, shift) <= tolerance:\n",
+    "        #     break\n",
+    "        shift = new_shift\n",
+    "    diagnostics[\"features1\"] = hv.Points(features_list.swapaxes(0, 1)[0])\n",
+    "    diagnostics[\"features2\"] = hv.Points(features_list.swapaxes(0, 1)[1])\n",
+    "    return shift"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "diag_d = util.tree()\n",
+    "shift = find_trench_drift(imgs[20], imgs[101], trenches, diagnostics=diag_d)"
    ]
   },
   {
@@ -940,99 +988,23 @@
    },
    "outputs": [],
    "source": [
-    "%%time\n",
-    "x = find_trench_drift(imgs[20], imgs[40], trenches2)"
+    "diag_d[\"features1\"] * diag_d[\"features2\"].opts(color=\"red\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "63",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "model_robust, inliers = skimage.measure.ransac(\n",
-    "    (*np.array(x).swapaxes(0, 1),),\n",
-    "    skimage.transform.EuclideanTransform,\n",
-    "    min_samples=3,\n",
-    "    residual_threshold=2,\n",
-    "    max_trials=100,\n",
-    ")"
+    "diag_d[\"correspondences\"]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "64",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "y = [\n",
-    "    [(*c[0], \"red\" if inlier else \"gray\"), (*c[1], \"red\" if inlier else \"gray\")]\n",
-    "    for c, inlier in zip(x, inliers)\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "65",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "hv.Path(y, vdims=[\"color\"]).opts(color=\"color\", line_width=2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "66",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "model_robust.translation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "67",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "hv.Path(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "68",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "class TranslationTransform(skimage.transform.EuclideanTransform):\n",
-    "    def estimate(self, src, dst):\n",
-    "        translation = (dst - src).mean(axis=1)\n",
-    "        self.params[0 : self.dimensionality, self.dimensionality] = translation\n",
-    "        return True"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69",
    "metadata": {
     "tags": []
    },
@@ -1051,7 +1023,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70",
+   "id": "65",
    "metadata": {
     "tags": []
    },
@@ -1069,25 +1041,198 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "k1 = 8.947368421052635e-10\n",
+    "img1 = image.correct_radial_distortion(nd2.get_frame_2D(v=8, t=70, c=0), k1=k1)\n",
+    "img2 = image.correct_radial_distortion(nd2.get_frame_2D(v=8, t=110, c=0), k1=k1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "trenches = trench_detection.find_trenches(img1, width_to_pitch_ratio=2 / 3.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regrid(\n",
+    "    hv.HoloMap({t: ui.RevImage(x) for t, x in enumerate([img1, img2])})\n",
+    ") * hv.HoloMap({t: trench_detection.plot_trenches(trenches) for t in range(2)})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "diag_d = util.tree()\n",
+    "shift = find_trench_drift(img1, img2, trenches, diagnostics=diag_d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "len(trenches)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "71",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "hv.HoloMap(plots)"
+    "diag_d[\"features\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72",
+   "metadata": {},
+   "source": [
+    "# Drift correction test"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72",
+   "id": "73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imgs = {t: nd2.get_frame_2D(v=8, c=0, t=t)[:500, :500] for t in trange(225)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "hv.HoloMap(plots)"
+    "trenches, info = trench_detection.find_trenches(\n",
+    "    imgs[20],\n",
+    "    width_to_pitch_ratio=1.4 / 3.5,\n",
+    "    join_info=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "?filter_trenches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "image_limits = geometry.get_image_limits(imgs[0].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "t0 = 20\n",
+    "t1 = 225\n",
+    "ts = np.arange(t0 + 1, t1)\n",
+    "shifts = {}\n",
+    "shifts[t0] = np.array([0, 0])\n",
+    "correspondences = {}\n",
+    "features = {}\n",
+    "for t in tqdm(ts):\n",
+    "    diag = {}\n",
+    "    # shift = find_trench_drift(\n",
+    "    #     imgs[t - 1], imgs[t], trenches, initial_shift=shifts[t - 1], diagnostics=diag\n",
+    "    # )\n",
+    "    shift = find_trench_drift(\n",
+    "        imgs[t0], imgs[t], trenches, initial_shift=shifts[t0], diagnostics=diag\n",
+    "    )\n",
+    "    shifts[t] = shift\n",
+    "    correspondences[t] = diag[\"correspondences\"]\n",
+    "    features[t] = diag[\"features2\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "regrid(hv.HoloMap({t: ui.RevImage(imgs[t]) for t in ts})) * hv.HoloMap(\n",
+    "    {\n",
+    "        t: trench_detection.plot_trenches(\n",
+    "            filter_trenches(shift_trenches(trenches, shifts[t]), image_limits)\n",
+    "        )\n",
+    "        for t in ts\n",
+    "    }\n",
+    ") * hv.HoloMap({t: features[t] for t in ts}).opts(color=\"red\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "regrid(hv.HoloMap({t: ui.RevImage(imgs[t]) for t in ts})) * hv.HoloMap(\n",
+    "    {\n",
+    "        t: trench_detection.plot_trenches(\n",
+    "            filter_trenches(shift_trenches(trenches, shifts[t]), image_limits)\n",
+    "        )\n",
+    "        for t in ts\n",
+    "    }\n",
+    ") * hv.HoloMap({t: features[t] for t in ts}).opts(color=\"red\")"
    ]
   }
  ],
