[image_analysis/trench_detection,shenker/image_analysis] plot_trenches now plots bboxes correctly. These have been verified against the output get_roi_crop.

--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/230619 Drift correction.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/230619 Drift correction.ipynb
@@ -815,9 +815,10 @@
    },
    "outputs": [],
    "source": [
-    "ui.overlay_inverted_yaxis(\n",
-    "    ui.RevImage(imgs[20]) * trench_detection.plot_trenches(trenches)\n",
-    ")"
+    "x = np.random.random((500, 500)) + np.arange(500)[:, np.newaxis] / 100\n",
+    "x = (\n",
+    "    np.arange(500)[np.newaxis, :] * np.ones(500)[:, np.newaxis]\n",
+    ")  # * np.random.random((500,500))# / 100"
    ]
   },
   {
@@ -829,13 +830,65 @@
    },
    "outputs": [],
    "source": [
-    "image_limits = geometry.get_image_limits(imgs[0].shape)"
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow(geometry.get_roi_crop(x == 467, trenches, 29)[:, :])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "62",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "ui.RevImage(x == 467) * trench_detection.plot_trenches(\n",
+    "    trenches, lines=True, labels=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "ui.RevImage(imgs[20]) * trench_detection.plot_trenches(trenches, lines=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(20, 20))\n",
+    "plt.imshow(geometry.get_roi_crop(imgs[20], trenches, 29)[160:].T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "image_limits = geometry.get_image_limits(imgs[0].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66",
    "metadata": {
     "tags": []
    },
@@ -850,7 +903,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63",
+   "id": "67",
    "metadata": {
     "tags": []
    },
@@ -864,7 +917,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64",
+   "id": "68",
    "metadata": {
     "tags": []
    },
@@ -914,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65",
+   "id": "69",
    "metadata": {
     "tags": []
    },
@@ -926,7 +979,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66",
+   "id": "70",
    "metadata": {
     "tags": []
    },
@@ -938,7 +991,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67",
+   "id": "71",
    "metadata": {
     "tags": []
    },
@@ -950,7 +1003,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68",
+   "id": "72",
    "metadata": {
     "tags": []
    },
@@ -962,7 +1015,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69",
+   "id": "73",
    "metadata": {
     "tags": []
    },
@@ -974,7 +1027,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70",
+   "id": "74",
    "metadata": {
     "tags": []
    },
@@ -993,7 +1046,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71",
+   "id": "75",
    "metadata": {
     "tags": []
    },
@@ -1005,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72",
+   "id": "76",
    "metadata": {
     "tags": []
    },
@@ -1017,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73",
+   "id": "77",
    "metadata": {
     "tags": []
    },
@@ -1029,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74",
+   "id": "78",
    "metadata": {
     "tags": []
    },
@@ -1040,56 +1093,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75",
+   "id": "79",
    "metadata": {},
    "source": [
     "# RevImage fix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "76",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "x = nd2reader.ND2Reader(\"/home/jqs1/scratch/jqs1/microscopy/230213/230213induction.nd2\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "77",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "x.metadata[\"channels\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "78",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z = x.get_frame_2D(t=0, v=0, c=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "79",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "display_image(z, downsample=4, scale=0.99)"
    ]
   },
   {
@@ -1101,7 +1108,7 @@
    },
    "outputs": [],
    "source": [
-    "zz = z[::4, ::4]"
+    "x = nd2reader.ND2Reader(\"/home/jqs1/scratch/jqs1/microscopy/230213/230213induction.nd2\")"
    ]
   },
   {
@@ -1113,21 +1120,17 @@
    },
    "outputs": [],
    "source": [
-    "zz.shape[0]"
+    "x.metadata[\"channels\"]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "82",
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "hv.Image(zz, bounds=(0, 0, zz.shape[1], zz.shape[0])).opts(\n",
-    "    aspect=zz.shape[1] / zz.shape[0]\n",
-    ")"
+    "z = x.get_frame_2D(t=0, v=0, c=0)"
    ]
   },
   {
@@ -1139,6 +1142,56 @@
    },
    "outputs": [],
    "source": [
+    "display_image(z, downsample=4, scale=0.99)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "zz = z[::4, ::4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "zz.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "hv.Image(zz, bounds=(0, 0, zz.shape[1], zz.shape[0])).opts(\n",
+    "    aspect=zz.shape[1] / zz.shape[0]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "hv.Image(zz, bounds=(0, zz.shape[0], zz.shape[1], 0)).opts(\n",
     "    aspect=zz.shape[1] / zz.shape[0]\n",
     ")"
@@ -1147,7 +1200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84",
+   "id": "88",
    "metadata": {
     "tags": []
    },
@@ -1162,7 +1215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85",
+   "id": "89",
    "metadata": {
     "tags": []
    },
@@ -1177,7 +1230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86",
+   "id": "90",
    "metadata": {
     "tags": []
    },
@@ -1192,7 +1245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87",
+   "id": "91",
    "metadata": {
     "tags": []
    },
@@ -1207,7 +1260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88",
+   "id": "92",
    "metadata": {
     "tags": []
    },
@@ -1223,7 +1276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89",
+   "id": "93",
    "metadata": {
     "tags": []
    },
@@ -1239,7 +1292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90",
+   "id": "94",
    "metadata": {
     "tags": []
    },
@@ -1259,7 +1312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91",
+   "id": "95",
    "metadata": {
     "tags": []
    },
@@ -1282,7 +1335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92",
+   "id": "96",
    "metadata": {
     "tags": []
    },
@@ -1305,7 +1358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93",
+   "id": "97",
    "metadata": {
     "tags": []
    },
@@ -1328,7 +1381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94",
+   "id": "98",
    "metadata": {
     "tags": []
    },
@@ -1346,7 +1399,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95",
+   "id": "99",
    "metadata": {
     "tags": []
    },
@@ -1360,7 +1413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96",
+   "id": "100",
    "metadata": {
     "tags": []
    },
@@ -1372,20 +1425,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97",
+   "id": "101",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
     "%%time\n",
-    "t = trench_detection.find_trenches(z, width_to_pitch_ratio=1.4 / 3.5)"
+    "diag = util.tree()\n",
+    "t = trench_detection.find_trenches(z, width_to_pitch_ratio=1.4 / 3.5, diagnostics=diag)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98",
+   "id": "102",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diag[\"bboxes\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "103",
    "metadata": {
     "tags": []
    },
@@ -1397,7 +1461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99",
+   "id": "104",
    "metadata": {
     "tags": []
    },
@@ -1409,7 +1473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "100",
+   "id": "105",
    "metadata": {
     "tags": []
    },
@@ -1423,19 +1487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "101",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "hv.__version__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "102",
+   "id": "106",
    "metadata": {
     "tags": []
    },
@@ -1457,7 +1509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "103",
+   "id": "107",
    "metadata": {
     "tags": []
    },
@@ -1473,7 +1525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "104",
+   "id": "108",
    "metadata": {
     "tags": []
    },
@@ -1491,7 +1543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "105",
+   "id": "109",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1501,7 +1553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "106",
+   "id": "110",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1511,7 +1563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "107",
+   "id": "111",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1521,7 +1573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "108",
+   "id": "112",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1531,7 +1583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "109",
+   "id": "113",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1541,7 +1593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "110",
+   "id": "114",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1551,7 +1603,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "111",
+   "id": "115",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1561,7 +1613,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "112",
+   "id": "116",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1571,7 +1623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "113",
+   "id": "117",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1583,7 +1635,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "114",
+   "id": "118",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1593,7 +1645,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "115",
+   "id": "119",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1618,7 +1670,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "116",
+   "id": "120",
    "metadata": {
     "tags": []
    },
@@ -1630,7 +1682,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "117",
+   "id": "121",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1643,7 +1695,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "118",
+   "id": "122",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1656,7 +1708,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "119",
+   "id": "123",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1666,7 +1718,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "120",
+   "id": "124",
    "metadata": {
     "tags": []
    },
@@ -1680,7 +1732,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "121",
+   "id": "125",
    "metadata": {
     "tags": []
    },
@@ -1692,7 +1744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "122",
+   "id": "126",
    "metadata": {
     "tags": []
    },
